--- a/templates/signup.html
+++ b/templates/signup.html
@@ -104,33 +104,19 @@
     <form action="/user-signup" method="post">
       
       <div class="form-group">
-        <label for="firstname">First Name:</label>
-        <input type="text" id="firstname" name="firstname" class="form-control" required>
-    
-        <label for="lastname">Last Name:</label>
-        <input type="text" id="lastname" name="lastname" class="form-control" required>
+        <label for="username">Last Name:</label>
+        <input type="text" id="username" name="username" class="form-control" required>
 
         <label for="email">Email Address:</label>
         <input type="email" id="email" name="email" class="form-control" required>
-
-        <label for="gender">Gender</label>
-        <select id="gender" name="gender" class="form-control">
-          <option value="Male">Male</option>
-          <option value="Female">Female</option>
-          <option value="other">Prefer not to Say</option>
-        </select>
-        
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" class="form-control" required>
-    
         <label for="password">Password:</label>
-    <div class="password-container">
-        <input type="password" id="password" name="password" class="form-control" required>
-      <span class="password-toggle" onclick="togglePasswordVisibility()"><i class="fas fa-eye"></i></span>
-    </div>
+        <div class="password-container">
+            <input type="password" id="password" name="password1" class="form-control" required>
+          <span class="password-toggle" onclick="togglePasswordVisibility()"><i class="fas fa-eye"></i></span>
+        </div>
       <div class="password-container">
         <label for="confirm_password">Confirm Password:</label>
-        <input type="password" id="confirmpassword" name="confirm_password" class="form-control" required><span class="confirm-password-toggle" onclick="toggleConfirmPasswordVisibility()"><i class="fas fa-eye"></i></span>
+        <input type="password" id="confirmpassword" name="password2" class="form-control" required><span class="confirm-password-toggle" onclick="toggleConfirmPasswordVisibility()"><i class="fas fa-eye"></i></span>
       </div>
         
         <div class="d-flex mt-2 mb-2">
