--- a/templates/signup.html
+++ b/templates/signup.html
@@ -133,7 +133,7 @@
       </div>
     </form>
     
-    <p class="mt-3 mb-4">Have an Account? <a style="text-decoration:none;"href="/login">Login</a> instead</p> 
+    <p class="mt-3 mb-4">Have an Account? <a style="text-decoration:none;"href="{{url_for('user_login')}}">Login</a> instead</p> 
   </div>
   {% include 'footer.html' %}
 </body>
