--- a/templates/login.html
+++ b/templates/login.html
@@ -89,7 +89,7 @@
     
          <label for="password">Password:</label>
     <div class="password-container">
-        <input type="password" id="password" name="password" class="form-control" required>
+        <input type="password" id="password" name="password1" class="form-control" required>
       <span class="password-toggle" onclick="togglePasswordVisibility()"><i class="fas fa-eye"></i></span>
     </div>
 
