database models updated

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,9 +2,9 @@
     <ul style="background-color:black" class="nav justify-content-center  pt-4 pb-4">
       <li class="footer-item"><a href="/" class="nav-link px-2 text-white">Back to Homepage</a></li>
       <li class="footer-item"><a href="https://www.fuzu.com/job?page=1&filters[job_id]=502262" target="_blank" class="nav-link px-2 text-white">Partners</a></li>
-      <li class="footer-item"><a href="https://colltech-careers--collincehals.repl.co/faqs"class="nav-link px-2 text-white">FAQs</a></li>
-      <li class="footer-item"><a href="/about/"class="nav-link px-2 text-white">About Us</a></li>
-      <li class="footer-item"><a href="/user-feedback"class="nav-link px-2 text-white">Feedback</a></li>
+      <li class="footer-item"><a href="{{url_for('faqs')}}"class="nav-link px-2 text-white">FAQs</a></li>
+      <li class="footer-item"><a href="{{url_for('about')}}"class="nav-link px-2 text-white">About Us</a></li>
+      <li class="footer-item"><a href="{{url_for('user_feedback')}}"class="nav-link px-2 text-white">Feedback</a></li>
        
        <ul>
       <li class="btn-group me-4" role="group" aria-label="First group">
