feedback form updated

--- a/templates/user_feedbackform.html
+++ b/templates/user_feedbackform.html
@@ -84,51 +84,10 @@
               <input type="text" name="firstname" class="form-control" placeholder="Enter your Name" required>
               <label for="email"><b>Enter Email:</b></label>
               <input type="email" name="email" class="form-control" placeholder="Enter your Email" required>
-            <label for="experience"><b>Overall Experience:</b> Rate your experience with our company's application process.</label>
-            <select name="experience" id="experience">
-                <option value="Excellent">Excellent</option>
-                  <option value="Very Good">Very Good</option>
-                  <option value="Good">Good</option>
-                  <option value="Fair">Fair</option>
-                  <option value="Poor">Poor</option>
-             </select>
-              <label for="usability"><b>Website Usability:</b> How easy was it to navigate our careers website and find relevant information?</label>
-              <select name="usability" id="usability">
-                    <option value="Excellent">Excellent</option>
-                    <option value="Very Good">Very Good</option>
-                    <option value="Good">Good</option>
-                    <option value="Fair">Fair</option>
-                    <option value="Poor">Poor</option>
-              </select>
-
-                <label for="listings"><b>Job Listings:</b> Did you find the job listings informative and well-presented?</label>
-                <select name="listings" id="listings">
-                    <option value="Excellent">Excellent</option>
-                    <option value="Very Good">Very Good</option>
-                    <option value="Good">Good</option>
-                    <option value="Fair">Fair</option>
-                    <option value="Poor">Poor</option>
-                </select>
-
-              <label for="communication"><b>Communication:</b> How satisfied were you with the communication throughout the application process?</label>
-                <select name="communication" id="communication">
-                    <option value="Excellent">Excellent</option>
-                    <option value="Very Good">Very Good</option>
-                    <option value="Good">Good</option>
-                    <option value="Fair">Fair</option>
-                    <option value="Poor">Poor</option>
-                </select>
-              <label for="response_time"><b>Response Time:</b> How quickly did you receive a response after submitting your application?</label>
-                <select name="response_time" id="response_time">
-                    <option value="Excellent">Excellent</option>
-                    <option value="Very Good">Very Good</option>
-                    <option value="Good">Good</option>
-                    <option value="Fair">Fair</option>
-                    <option value="Poor">Poor</option>
-                </select>
-              
-              <label for="suggestions"><b>Suggestions for Improvement:</b> Provide any suggestions or feedback for improving our application process or careers website.</label>
-              <textarea name="suggestions" class="form-control" placeholder="Enter Message" required></textarea>
+              <label for="occupation"><b>Occupation:</b></label>
+              <input type="text" name="occupation" class="form-control" placeholder="Your Occupation" required>
+              <label for="comment">Comment</label>
+              <textarea name="comment" class="form-control" placeholder="Enter comment" required></textarea>
               <button type="submit" style="padding-top:12px;padding-bottom: 12px;padding-left: 80px; padding-right: 80px;" class="btn btn-primary">Send Feedback</button>
             </form>
           </div>
